--- a/src/app/pieces/game-characters/game-characters.component.html
+++ b/src/app/pieces/game-characters/game-characters.component.html
@@ -24,7 +24,10 @@
                     <label for="description">{{'char_description_label' | translate}}</label>
                     <textarea class="background" name="description" [(ngModel)]="newCharacter.description" (change)="editTrace($event,'newCharacter_description')"></textarea>
                 </div>
-
+                <div class="piece-form-character-create-infos-phone" *ngIf="unityService.unity_isActive">
+                    <label for="tel">{{'char_phone_label' | translate}}</label>
+                    <input name="tel" type="tel" [(ngModel)]="newCharacter.tel" (change)="editTrace($event, 'newCharacter_tel')"/>
+                </div>
                 <div class="piece-form-character-create-infos-color">
                     <label for="color">{{'char_color_label' | translate}}</label>
                     <input name="color" type="color" [(ngModel)]="newCharacter.color" (change)="editTrace($event,'newCharacter_color')"/>
@@ -49,7 +52,10 @@
                         <label for="description">{{'char_description_label' | translate}}</label>
                         <textarea name="description" [(ngModel)]="character.description" (change)="editTrace($event,'Character_['+index+']_description')"></textarea>
                     </div>
-
+                    <div class="piece-form-character-create-infos-phone" *ngIf="unityService.unity_isActive">
+                        <label for="tel">{{'char_phone_label' | translate}}</label>
+                        <input name="tel" type="tel" [(ngModel)]="character.tel" (change)="editTrace($event, 'newCharacter_tel')"/>
+                    </div>
                     <div class="piece-form-character-create-infos-color">
                         <label for="color">{{'char_color_label' | translate}}</label>
                         <input name="color" type="color" [(ngModel)]="character.color" (change)="editTrace($event,'Character_['+index+']_color')"/>
