--- a/src/app/pieces/role/role.component.html
+++ b/src/app/pieces/role/role.component.html
@@ -67,7 +67,7 @@ matTooltipPosition="left" [matTooltipDisabled]="!tooltipService.activatedTooltip
                     matTooltipPosition="above" [matTooltipDisabled]="!tooltipService.activatedTooltips">
                         <option value="quest">{{'role_reward_type_newQuest' | translate}}</option>
                         <option value="skill">{{'role_reward_type_skill' | translate}}</option>
-                        <!--<option value="character">Récupérer le contact d'un PNJ</option>-->
+                        <option value="character">{{'role_reward_type_character' | translate}}</option>
                         <option value="objective">{{'role_reward_type_objective' | translate}}</option>
                         <option value="objects">{{'role_reward_type_object' | translate}}</option>
                         <!--<option value="discuss">Changer de discussion</option>-->
@@ -82,14 +82,16 @@ matTooltipPosition="left" [matTooltipDisabled]="!tooltipService.activatedTooltip
                     </div>
                     <button mat-button class="piece-form-rewards-reward-objects-add" (click)="addObject(i)"><mat-icon fontIcon="add"></mat-icon></button>
                 </div>
-                <!--
                 <div class="piece-form-rewards-reward-character" *ngIf="reward.type == 'character'">
-                    <select [(ngModel)]="getCharacterReward(i).character">
+                    <select [(ngModel)]="getCharacterReward(i).character" (change)="editTrace($event, 'Reward_['+i+']_character')"
+                    [matTooltip]="translate.instant('role_reward_type_character_tooltip')"
+                    matTooltipPosition="above" [matTooltipDisabled]="!tooltipService.activatedTooltips">
                         <option [ngValue]="character" *ngFor="let character of scenario.characters">{{character.name}}</option>
                     </select>
                     <button mat-button (click)="removeReward(i)"><mat-icon fontIcon="remove"></mat-icon></button>
                 </div>
-                
+
+                <!--                
                 <div class="piece-form-rewards-reward-discussion" *ngIf="reward.type == 'discuss'">
                     <select>
                         <option>Discussion 1</option>
