--- a/src/app/pieces/role/role.component.scss
+++ b/src/app/pieces/role/role.component.scss
@@ -324,7 +324,7 @@
                     }
                 }
 
-                &-skill {
+                &-skill, &-object {
                     display: flex;
                     flex-direction: row;
                     justify-content: space-between;
